trunk/Archive2/60/ca090972617c1c/output
main.cpp: In function 'int main()':
main.cpp:23:36: error: no matching function for call to 'isUnique(const wchar_t [4])'
     std::cout << isUnique(L"فعه") << '\n';
                                    ^
main.cpp:23:36: note: candidate is:
main.cpp:6:6: note: template<class CharT> bool isUnique(const std::basic_string<_CharT>&)
 bool isUnique(const std::basic_string<CharT>& s)
      ^
main.cpp:6:6: note:   template argument deduction/substitution failed:
main.cpp:23:36: note:   mismatched types 'const std::basic_string<_CharT>' and 'const wchar_t [4]'
     std::cout << isUnique(L"فعه") << '\n';
                                    ^
